--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -6,7 +6,13 @@
     <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css">  
   </head>
   <body id="page-top">
-    
-
+    <% if Helpers.is_logged_in?(@session) %>
+      <% user = Helpers.current_user(@session) %>
+      <h1>Welcome <%= user.username %></h1>
+      <h3>Your Balance: <%= user.balance %></h3>
+    <% else %>
+      <p>You Must <a href="/">Log In</a> to View Your Balance</p>
+    <% end %>
+    <a href="logout" id="Log Out">Log Out</a>
   </body>
 </html>
