--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -8,6 +8,12 @@
   <body id="page-top">
     <h1>Welcome to FlatBank</h1>
     <h3>Log In Please</h3>
-
+      <form action='/login' method='post'>
+        <p><label for='u'>Username: </label>
+        <input type='text' name='username' id='u'></p>
+        <p><label for='p'>Password: </label>
+        <input type='text' name='password' id='p'></p>
+        <input type='submit' value='Log In'>
+      </form>
   </body>
 </html>
