--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -8,6 +8,12 @@
   <body id="page-top">
     <h1>Welcome to FlatBank</h1>
     <h3>Log In Please</h3>
-
+      <form method='POST' action='/login'>
+      <label for="username">Name:</label> 
+      <input id="username" name="username" type="text">
+      <label for="password">Password:</label>
+      <input id="password" name="password" type="text">
+      <input id="submit" type="submit" value="Submit">
+      </form>
   </body>
 </html>
